--- a/index.html
+++ b/index.html
@@ -1,37 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>DYNO game</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-      crossorigin="anonymous"/>
-      <link rel="stylesheet" href="style.css">
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  </head>
-
-  <body id="body">
-
+<!DOCTYPE HTML>
+<html lang = "en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Dragon-Dino Game - novil </title>
+<link rel = "Stylesheet" href = "style.css">
+</head>
+<body>
     <div class="gameContainer">
-      <div class="gameOver">
-        WELCOME TO THE GAME
-
-      </div>
-      <div class="dino animateDino">
-
-      </div>
-      <div id="scoreCount">
-        YOUR SCORE : 0
-      </div>
-      <div class="obstacle obstacle"></div>
-
-
+        <div class="gameOver">
+            Welcome to i-dragon game
+        </div>
+        <div class="dino animateDino">
+        </div>
+        <div id="scoreCont">
+            Your Score: 0
+        </div>
+        <div class="obstacle obstacleAni"></div>
     </div>
-
-
-    
-  </body>
+</body>
 </html>
