new change with js beast.....

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="gameContainer">
         <div class="gameOver">
-            Welcome to i-dragon game
+            Welcome to DINO-DRAGON GAME
         </div>
         <div class="dino animateDino">
         </div>
